@@ -11,6 +11,7 @@ PHP                                                                        NEWS
 - Added "consumed" stream filter. (Marcus)
 - Added new mysqli constants for BIT and NEW_DECIMAL field types:
   MYSQLI_TYPE_NEWDECIMAL and MYSQLI_TYPE_BIT. FR #36007. (Georg)
+- Added ReflectionClass::newInstanceArgs($args). (Marcus)
 - Fixed imagecolorallocate() and imagecolorallocatelapha() to return FALSE
   on error. (Pierre)
 - Fixed bug #36134 (DirectoryIterator constructor failed to detect empty 
